--- a/main.html
+++ b/main.html
@@ -5,21 +5,20 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		main{
-			width:150px;
-			height:150px;
-			background-color:black;
+		 .accio #job {
+			width: 150px;
+			height: 150px;
+			background-color: black;
 		}
-		.hello-accio{
-			text-color:white;
-			left-margin:32px;
-			padding:10px;
+		.hello-accio {
+			text-color: white;
+			left-margin: 32px;
+			padding: 10px;
 		}
 	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
 	<main class="accio" id="job">
 		<p class="hello-accio">Hello Accio Job</p>
 	</main>
