--- a/main.html
+++ b/main.html
@@ -4,6 +4,18 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.accio{
+	width: 150px;
+	height: 150px;
+	background-color: white;
+}
+.hello-accio{
+	color: white;
+	margin-left: 32px;
+	padding: 10px;
+}
+	</style>
 </head>
 
 <body>
