--- a/main.html
+++ b/main.html
@@ -4,23 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
-		.accio{
-	width: 150px;
-	height: 150px;
-	background-color: white;
-}
-.hello-accio{
-	color: white;
-	margin-left: 32px;
-	padding: 10px;
-}
-	</style>
 </head>
 
 <body>
-	<main class="accio" id="job">
-		<p class="hello-accio">Hello Accio Job</p>
+	<main style="width: 150px height: 150px background-color: white" class="accio" id="job">
+		<p style="color: white padding: 10px margin-left: 32px" class="hello-accio">Hello Accio Job</p>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
