--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<main style="width: 150px height: 150px background-color: white" class="accio" id="job">
-		<p style="color: white padding: 10px margin-left: 32px" class="hello-accio">Hello Accio Job</p>
+	<main class="accio" id="job">
+		<p class="hello-accio">Hello Accio Job</p>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
